<resources>
    <string name="app_name">myShifts</string>

    <string name="action_settings">Settings</string>
    <string name="student_records_system">Student Records System</string>
    <string name="title_activity_students">myShifts: Employees</string>
    <string name="title_activity_courses">myShifts: Schedules</string>
    <string name="title_activity_student_courses">myShifts: Student Sched History</string>
    <string name="title_activity_course_students">myShifts: Schedule Creation</string>
    <string name="employees">Employees</string>
    <string name="createNewEmployee">Create New Employee</string>
    <string name="createNewSchedule">Create New Schedule</string>
    <string name="createNewShift">Create New Shift</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="submit">Submit</string>
    <string name="groupID">Group: K</string>
    <string name="courseInfo">Comp3350 Winter 2017</string>
    <string name="cancel">Cancel</string>
    <string name="employee">Employee</string>
    <string name="Manager">Manager</string>
    <string name="mainlogo">Main Logo</string>
    <string name="workdays">Schedules</string>
    <string name="registrations">Registrations</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="updateScheduleInfo">Update Schedule Info</string>
    <string name="updateEmployee">Update Employee</string>
    <string name="updateShift">Update Shift</string>
    <string name="delete">Delete</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="info">Info</string>
    <string name="numAmount">Amount of Appearances</string>
    <string name="totalShifts">Total Shifts</string>
    <string name="totalHours">Total Hours</string>
    <string name="totalCost">Total Cost</string>
    <string name="manageEmployees">Manage Employees</string>
    <string name="manageSchedules">Manage Schedules</string>
    <string name="viewEmployees">View Employees</string>
    <string name="viewShifts">View Shifts</string>
    <string name="viewSchedules">View Schedules</string>
    <string name="employee_id">Employee ID</string>
    <string name="course_id">Workday ID</string>
    <string name="gpa">Summary</string>
    <string name="shifts">Shifts</string>
    <string name="fatalError">Fatal error</string>
    <string name="warning">Warning</string>
    <string name="confirm">Are you sure?</string>
    <string name="confirm1">Confirm</string>
    <string name="weekday">Weekday</string>
    <string name="scheduleID">Schedule ID</string>
    <string name="employeeName">Employee Name</string>
    <string name="summary">Summary</string>
    <string name="startTime">Start Time</string>
    <string name="endTime">End Time</string>
    <string name="close">Close</string>
    <string name="hourly_wage">Hourly Wage</string>
    <string name="phone_number">Phone Number</string>
</resources>
