<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/darkBackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="comp3350.myshifts.presentation.ManagerActivity"
    android:weightSum="1">

    <ImageView
        android:layout_width="match_parent"
        app:srcCompat="@drawable/esslogo"
        android:src="@drawable/esslogo"
        android:id="@+id/imageView2"
        android:paddingBottom="10dp"
        android:layout_height="200dp"
        android:contentDescription="@string/mainlogo" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="567dp"
        android:background="#ffffff"
        android:layout_weight="0.75"
        tools:ignore="InefficientWeight">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/listEmployees"
            android:layout_gravity="top"
            android:choiceMode="singleChoice" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonShift"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:enabled="false"
        android:onClick="buttonShiftsOnClick"
        android:text="@string/shifts" />

    <Button
        android:id="@+id/btnManagerSummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:enabled="false"
        android:visibility="gone"
        android:onClick="btnManagerSummaryOnClick"
        android:text="@string/summary" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/btnManOptions1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:id="@+id/buttonEmployeeDelete"
            android:layout_alignParentEnd="true"
            android:enabled="false"
            android:onClick="buttonDeleteOnClick"
            tools:ignore="RelativeOverlap" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:id="@+id/buttonEmployeeCreate"
            android:layout_alignParentStart="true"
            android:enabled="true"
            android:onClick="buttonCreateOnClick" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:id="@+id/buttonEmployeeUpdate"
            android:layout_centerHorizontal="true"
            android:enabled="false"
            android:onClick="buttonUpdateOnClick" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="19dp"
        android:id="@+id/separator"
        android:layout_marginTop="10dp"
        android:visibility="visible"
        android:layout_marginBottom="10dp" />

</LinearLayout>
