<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_manager_schedule"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/darkBackground"
    tools:context="comp3350.myshifts.presentation.ManagerScheduleActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:src="@drawable/esslogo"
        android:id="@+id/imageView2"
        android:paddingBottom="10dp"
        android:layout_height="200dp"
        android:contentDescription="@string/mainlogo" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="567dp"
        android:background="#ffffff"
        android:layout_weight="0.75"
        tools:ignore="InefficientWeight">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/listSchedules"
            android:layout_gravity="top"
            android:choiceMode="singleChoice" />
    </LinearLayout>

    <Button
        android:id="@+id/btnManagerShift"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:enabled="false"
        android:onClick="btnManagerShiftsOnClick"
        android:text="@string/shifts" />
    <Button
        android:id="@+id/btnManagerSummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:enabled="false"
        android:visibility="gone"
        android:onClick="btnManagerSummaryOnClick"
        android:text="@string/summary" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/btnManagerScheduleOptions">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:id="@+id/buttonScheduleDelete"
            android:layout_alignParentEnd="true"
            android:enabled="false"
            android:onClick="buttonScheduleDeleteOnClick"
            tools:ignore="RelativeOverlap" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:id="@+id/buttonScheduleCreate"
            android:layout_alignParentStart="true"
            android:enabled="true"
            android:onClick="buttonScheduleCreateOnClick" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:id="@+id/buttonScheduleUpdate"
            android:layout_centerHorizontal="true"
            android:enabled="false"
            android:onClick="buttonScheduleUpdateOnClick" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:id="@+id/separator"
        android:layout_marginTop="10dp"
        android:visibility="visible"
        android:layout_marginBottom="10dp"
        android:layout_height="18dp" />


</LinearLayout>
