<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="@color/darkBackground"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="comp3350.myshifts.presentation.HomeActivity">

    <Button
        android:layout_height="50dp"

        android:textColor="#000000"
        android:textSize="20sp"
        android:text="@string/Manager"
        android:id="@+id/buttonMainManager"
        android:layout_width="300dp"
        android:layout_marginTop="69dp"
        android:layout_below="@+id/buttonMainEmployee"
        android:layout_alignLeft="@+id/buttonMainEmployee"
        android:layout_alignStart="@+id/buttonMainEmployee"
        android:background="#FFFFFF"
        tools:ignore="RtlHardcoded" />

    <ImageView
        android:layout_width="match_parent"
        android:src="@drawable/esslogo"
        app:srcCompat="@drawable/esslogo"
        android:id="@+id/imageView"
        android:contentDescription="@string/mainlogo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:layout_height="200dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/courseInfo"
            android:layout_height="wrap_content"
            android:textColor="#ada0c1"
            android:textSize="25sp"
            android:id="@+id/courseInfo"
            android:gravity="left"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:text="@string/groupID"
            android:layout_height="wrap_content"
            android:textColor="#ada0c1"
            android:textSize="25sp"
            android:id="@+id/groupID"
            android:gravity="right"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

    <Button
        android:text="@string/employee"
        android:textColor="#000000"
        android:textSize="20sp"
        android:id="@+id/buttonMainEmployee"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="#FFFFFF"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
