<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="400dp"
    android:layout_height="wrap_content"
    android:background="@color/dialogBackground"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:paddingTop="10dp"
    android:paddingBottom="30dp"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="0.96"
        android:layout_height="60dp"
        android:weightSum="1"
        android:layout_width="match_parent">

        <TextView
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/summary"
            android:textColor="@color/dialogTextColor"
            android:textSize="30sp"
            android:id="@+id/titleSummaryDialog"
            android:gravity="center_vertical"
            android:layout_marginBottom="64dp"
            android:layout_height="60dp"
            android:layout_width="match_parent" />

    </LinearLayout>


    <LinearLayout
        android:background="#ffffff"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:id="@+id/summaryNameLayout"
        android:layout_height="50dp">


        <TextView
            android:layout_width="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/name"
            android:id="@+id/textnameField"
            android:gravity="center_vertical"
            android:layout_marginBottom="64dp"
            android:layout_height="60dp" />

    </LinearLayout>

    <LinearLayout
        android:background="#ffffff"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:id="@+id/employeeNameLayout"
        android:layout_height="50dp">


        <TextView
            android:layout_width="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/info"
            android:id="@+id/textInfoField"
            android:gravity="center_vertical"
            android:layout_marginBottom="64dp"
            android:textSize="18sp"
            android:layout_height="60dp" />

    </LinearLayout>

    <LinearLayout
        android:background="#ffffff"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:id="@+id/scheduleIDDialogLayout"
        android:layout_height="55dp">

        <TextView
            android:layout_width="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/numAmount"
            android:id="@+id/textAmountField"
            android:gravity="center_vertical"
            android:layout_marginBottom="64dp"
            android:textSize="16sp"
            android:layout_height="60dp" />

    </LinearLayout>

    <LinearLayout
        android:background="#ffffff"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_weight="0.09"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:id="@+id/endTimeLayoutDialog"
        android:layout_height="55dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="16sp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/totalShifts"
            android:gravity="center_vertical"
            android:id="@+id/texttotalShiftField"
            android:layout_marginBottom="64dp" />
    </LinearLayout>

    <LinearLayout
        android:background="#ffffff"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:id="@+id/weekdayLayout"
        android:layout_height="55dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="16sp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/totalHours"
            android:gravity="center_vertical"
            android:id="@+id/textTotalHoursField"
            android:layout_marginBottom="64dp" />

    </LinearLayout>

    <LinearLayout
        android:background="#ffffff"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_weight="0.09"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:id="@+id/startTimeLayoutDialog"
        android:layout_height="55dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="16sp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/totalCost"
            android:gravity="center_vertical"
            android:id="@+id/textTotalCostField"
            android:layout_marginBottom="64dp" />

    </LinearLayout>

    <Button
        android:text="@string/close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/summaryCancelBtn"
        android:layout_weight="1"
        android:textSize="20sp"
        tools:ignore="ButtonStyle" />

</LinearLayout>