<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    android:weightSum="1"
    android:orientation="vertical"
    android:background="@color/dialogBackground">

    <TextView
        android:text="@string/confirm"
        android:layout_width="match_parent"
        android:textSize="50sp"
        android:textColor="@color/dialogTextColor"
        android:gravity="center"
        android:id="@+id/textConfirmDialog"
        android:layout_height="125dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mainBtnLayoutConfirmDialog">

        <Button
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:id="@+id/confirmDialogCancelBtn"
            android:layout_weight="1"
            tools:ignore="ButtonStyle,RtlHardcoded" />

        <Button
            android:text="@string/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:id="@+id/confirmDialogSubmitBtn"
            android:layout_weight="1"
            tools:ignore="ButtonStyle,RtlHardcoded" />
    </LinearLayout>
</LinearLayout>
