<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_manager_options"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/darkBackground"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="comp3350.myshifts.presentation.ManagerOptionsActivity">

    <ImageView
        android:layout_width="match_parent"
        android:src="@drawable/esslogo"
        android:id="@+id/imageView"
        android:contentDescription="@string/mainlogo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:layout_height="200dp" />


    <Button
        android:text="@string/manageSchedules"
        android:textColor="#000000"
        android:textSize="20sp"
        android:id="@+id/btnManagerOpt1"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="#FFFFFF"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_height="50dp"

        android:textColor="#000000"
        android:textSize="20sp"
        android:text="@string/manageEmployees"
        android:id="@+id/btnManagerOpt2"
        android:layout_width="300dp"
        android:layout_marginTop="83dp"
        android:background="#FFFFFF"
        tools:ignore="RtlHardcoded"
        android:layout_below="@+id/btnManagerOpt1"
        android:layout_alignStart="@+id/btnManagerOpt1" />

</RelativeLayout>