<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dialogBackground"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:paddingTop="30dp"
    android:paddingBottom="30dp"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="0.96"
        android:layout_height="60dp"
        android:weightSum="1"
        android:layout_width="450dp">

        <TextView
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/createNewShift"
            android:textColor="@color/dialogTextColor"
            android:textSize="30sp"
            android:id="@+id/titleShiftDialog"
            android:gravity="center_vertical"
            android:layout_marginBottom="64dp"
            android:layout_height="60dp"
            android:layout_width="575dp" />

    </LinearLayout>

    <LinearLayout
        android:background="#ffffff"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/employeeNameLayout">


        <TextView
            android:layout_width="200dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/employeeName"
            android:id="@+id/textEmployeeNameField"
            android:gravity="center_vertical"
            android:layout_marginBottom="64dp"
            android:layout_height="60dp" />

        <EditText
            android:layout_height="match_parent"
            android:inputType="number"
            android:ems="12"
            android:enabled="true"
            android:id="@+id/editEmployeeNameField"
            android:layout_weight="40.63"
            android:layout_width="0dp"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <LinearLayout
        android:background="#ffffff"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/scheduleIDDialogLayout">

        <TextView
            android:layout_width="200dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/scheduleID"
            android:id="@+id/textScheduleIDField"
            android:gravity="center_vertical"
            android:layout_marginBottom="64dp"
            android:layout_height="60dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:id="@+id/editScheduleIDField"
            android:layout_gravity="fill_horizontal"
            tools:ignore="LabelFor,TextFields" />
    </LinearLayout>

    <LinearLayout
        android:background="#ffffff"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/weekdayLayout">

        <TextView
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/weekday"
            android:gravity="center_vertical"
            android:id="@+id/textWeekdayField"
            android:layout_marginBottom="64dp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:id="@+id/editWeekdayField"
            android:layout_gravity="fill_horizontal"
            android:layout_weight="1"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:background="#ffffff"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.09"
        android:id="@+id/startTimeLayoutDialog">

        <TextView
            android:layout_width="200dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/startTime"
            android:gravity="center_vertical"
            android:id="@+id/textStartTimeField"
            android:layout_height="60dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal"
            android:textSize="25sp"
            android:id="@+id/editStartTimeField"
            android:layout_gravity="fill_horizontal"
            tools:ignore="LabelFor" />
    </LinearLayout>
    <LinearLayout
        android:background="#ffffff"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.09"
        android:id="@+id/endTimeLayoutDialog">

        <TextView
            android:layout_width="200dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/endTime"
            android:gravity="center_vertical"
            android:id="@+id/textEndTimeField"
            android:layout_height="60dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal"
            android:textSize="25sp"
            android:id="@+id/editEndTimeField"
            android:layout_gravity="fill_horizontal"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mainBtnLayoutShiftDialog">

        <Button
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/shiftCancelBtn"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />

        <Button
            android:text="@string/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/shiftSubmitBtn"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>